--- a/package.json
+++ b/package.json
@@ -28,5 +28,11 @@
       "no-mixed-operators": 0,
       "object-curly-spacing": 0
     }
+  },
+  "dependencies": {
+    "get-pokeball": "^0.0.1",
+    "pokeball-shake": "^0.0.1",
+    "pokemon-capture-quote": "^0.0.1",
+    "pokemon-f": "^0.0.1"
   }
 }
