--- a/package.json
+++ b/package.json
@@ -6,13 +6,7 @@
   "repository": "https://github.com/bukinoshita/catch-pokemon.git",
   "author": "Bu Kinoshita <bukinoshita@gmail.com>",
   "license": "MIT",
-  "keywords": [
-    "pokemon",
-    "catch",
-    "catch-pokemon",
-    "pokeball",
-    "algorithm"
-  ],
+  "keywords": ["pokemon", "catch", "catch-pokemon", "pokeball", "algorithm"],
   "scripts": {
     "test": "xo && ava"
   },
@@ -26,7 +20,8 @@
     "space": true,
     "rules": {
       "no-mixed-operators": 0,
-      "object-curly-spacing": 0
+      "object-curly-spacing": 0,
+      "no-useless-escape": 0
     }
   },
   "dependencies": {
